--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,92 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+    --background-primary: #ffffff;
+    --color-primary: #333;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html[data-theme="dark"] {
+    --background-primary: #030303;
+    --color-primary: #ccc;
+}
+
+html {
+    transition: color 300ms, background-color 300ms; /* Make transition of themes nicer */
+    background: var(--background-primary);
+    color: var(--color-primary);
+}
+
+h1,
+h2,
+p {
+    color: var(--color-primary);
+}
+
+.theme-toggle-button {
+    display: inline-block;
+}
+
+.theme-toggle-button__button {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.theme-toggle-button__button--purple {
+    color: purple;
+}
+
+.theme-toggle-button__button--orange {
+    color: orange;
+}
+
+.theme-toggle-button__button:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+/* Our Colorscheme */
+.green {
+    color: #9fef00;
+}
+
+.bg-green {
+    background-color: #9fef00;
+}
+
+.grey {
+    color: #a4b1cd;
+}
+
+.black {
+    color: #141d2b;
+}
+
+.blue {
+    color: #0086ff;
+}
+
+.yellow {
+    color: #ffaf00;
+}
+
+.red {
+    color: #ff3e3e;
+}
+
+.purple {
+    color: #9f00ff;
+}
+
+.cyan {
+    color: #2ee7b6;
+}
+
+.bg-cyan {
+    background-color: #2ee7b6;
 }
